modification of the installer script i order to modify the name of the installer package (it contains now the string "SDL" or "SFML" depending the graphic lib)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,10 +22,12 @@ add_subdirectory(maps)
 add_subdirectory(LogicChevaux)
 
 if(${BUILD_SDL_SUPPORT})
+	set (SUFFIX_LIB "SDL")
 	message ( STATUS "SDLGfxChevaux" )
 	# add the subdirectories
 	add_subdirectory(SDLGfxChevaux)
 elseif(${BUILD_SFML_SUPPORT})
+	set (SUFFIX_LIB "SFML")
 	message ( STATUS "SFMLGfxChevaux" )
 	# # add the SFML header path
 	# set(SFML_PATH "${CMAKE_CURRENT_SOURCE_DIR}/SFML")
@@ -60,10 +62,10 @@ set(CPACK_PACKAGE_NAME "PremierGalop")
 set(CPACK_PACKAGE_VENDOR "Christian FOUCHER")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "PremierGalop - Strategy horse board game")
 set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/ReadMe.txt")
-set(CPACK_PACKAGE_VERSION "0.1.0")
 set(CPACK_PACKAGE_VERSION_MAJOR "0")
 set(CPACK_PACKAGE_VERSION_MINOR "1")
 set(CPACK_PACKAGE_VERSION_PATCH "0")
+set(CPACK_PACKAGE_VERSION "${SUFFIX_LIB}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
 set(CPACK_PACKAGE_INSTALL_DIRECTORY "PremierGalop")
 set(CPACK_PACKAGE_EXECUTABLES "PremierGalop" "Premier Galop")
 set(CPACK_CREATE_DESKTOP_LINKS "PremierGalop")
