--- a/SDLGfxChevaux/CMakeLists.txt
+++ b/SDLGfxChevaux/CMakeLists.txt
@@ -34,7 +34,13 @@ aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} SOURCE_SDLGFXCHEVAUX)
 add_library(SDLGfxChevaux STATIC ${SOURCE_SDLGFXCHEVAUX})
 
 if(WIN32)
-	install(DIRECTORY "${SDL_INCLUDE_DIR}/../lib/" DESTINATION "bin" COMPONENT "runtime" FILES_MATCHING PATTERN "*.dll")
-	install(DIRECTORY "${SDLIMAGE_INCLUDE_DIR}/../lib/" DESTINATION "bin" COMPONENT "runtime" FILES_MATCHING PATTERN "*.dll")
-	install(DIRECTORY "${SDLTTF_INCLUDE_DIR}/../lib/" DESTINATION "bin" COMPONENT "runtime" FILES_MATCHING PATTERN "*.dll")
+	if(CMAKE_CL_64)
+		set(ARCH "x64")
+	else()
+		set(ARCH "x86")
+	endif()
+	message(STATUS "Architecture: ${ARCH}")
+	install(DIRECTORY "${SDL_INCLUDE_DIR}/../lib/${ARCH}/" DESTINATION "bin" COMPONENT "runtime" FILES_MATCHING PATTERN "*.dll")
+	install(DIRECTORY "${SDLIMAGE_INCLUDE_DIR}/../lib/${ARCH}/" DESTINATION "bin" COMPONENT "runtime" FILES_MATCHING PATTERN "*.dll")
+	install(DIRECTORY "${SDLTTF_INCLUDE_DIR}/../lib/${ARCH}/" DESTINATION "bin" COMPONENT "runtime" FILES_MATCHING PATTERN "*.dll")
 endif()
