--- a/gfx/CMakeLists.txt
+++ b/gfx/CMakeLists.txt
@@ -1,8 +1,5 @@
 project(GFXRESOURCES)
 
-get_property(bin2C_location TARGET bin2C PROPERTY LOCATION)
-message (STATUS "bin2C_location == ${bin2C_location}")
-
 file(GLOB_RECURSE file_list "${CMAKE_CURRENT_SOURCE_DIR}/*")
 add_custom_target(GFXResources
 				COMMENT "Generates Header files of the resources")
@@ -12,9 +9,9 @@ foreach(f ${file_list})
 		message( STATUS "bin2C ${f}" )
 		add_custom_command(TARGET GFXResources
 		                   PRE_BUILD
-						   COMMAND ${bin2C_location} ${f}
-						   DEPENDS Bin2C
-						   COMMENT "Bin2C : Generate Header file for ${f}"
+						   COMMAND $<TARGET_FILE:bin2C> ${f}
+						   DEPENDS bin2C
+						   COMMENT "bin2C : Generate Header file for ${f}"
 						   VERBATIM)
 	endif()
 endforeach(f)
