First SDL2 release (compile on Windows but doesn't work : black screen!)

--- a/SDLGfxChevaux/CMakeLists.txt
+++ b/SDLGfxChevaux/CMakeLists.txt
@@ -10,23 +10,29 @@ message ( STATUS "LOGICCHEVAUX_SOURCE_DIR=${LOGICCHEVAUX_SOURCE_DIR}" )
 link_directories (${LOGICCHEVAUX_BINARY_DIR})
 message ( STATUS "LOGICCHEVAUX_BINARY_DIR=${LOGICCHEVAUX_BINARY_DIR}" )
 
-FIND_PACKAGE(SDL REQUIRED)
-FIND_PACKAGE(SDL_image REQUIRED)
-FIND_PACKAGE(SDL_ttf REQUIRED)
+
+# includes cmake/FindSDL2.cmake
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+
+FIND_PACKAGE(SDL2 REQUIRED)
+FIND_PACKAGE(SDL2_image REQUIRED)
+FIND_PACKAGE(SDL2_ttf REQUIRED)
+
+include_directories(${SDL2_INCLUDE_DIR})
 
 # Workaround for the non-working REQUIRED flag
-if ( NOT SDL_FOUND )
-   message ( FATAL_ERROR "SDL not found!" )
-endif ( NOT SDL_FOUND )
+if ( NOT SDL2_FOUND )
+   message ( FATAL_ERROR "SDL2 not found!" )
+endif ( NOT SDL2_FOUND )
 
-include_directories (${SDL_INCLUDE_DIR})
-include_directories (${SDLIMAGE_INCLUDE_DIR})
-include_directories (${SDLTTF_INCLUDE_DIR})
+include_directories (${SDL2_INCLUDE_DIR})
+include_directories (${SDL2_IMAGE_INCLUDE_DIR})
+include_directories (${SDL2_TTF_INCLUDE_DIR})
 
 link_libraries (
-   ${SDL_LIBRARY}
-   ${SDLIMAGE_LIBRARY}
-   ${SDLTTF_LIBRARY}
+   ${SDL2_LIBRARY}
+   ${SDL2_IMAGE_LIBRARY}
+   ${SDL2_TTF_LIBRARY}
 )
 
 aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} SOURCE_SDLGFXCHEVAUX)
@@ -40,7 +46,7 @@ if(WIN32)
 		set(ARCH "x86")
 	endif()
 	message(STATUS "Architecture: ${ARCH}")
-	install(DIRECTORY "${SDL_INCLUDE_DIR}/../lib/${ARCH}/" DESTINATION "bin" COMPONENT "runtime" FILES_MATCHING PATTERN "*.dll")
-	install(DIRECTORY "${SDLIMAGE_INCLUDE_DIR}/../lib/${ARCH}/" DESTINATION "bin" COMPONENT "runtime" FILES_MATCHING PATTERN "*.dll")
-	install(DIRECTORY "${SDLTTF_INCLUDE_DIR}/../lib/${ARCH}/" DESTINATION "bin" COMPONENT "runtime" FILES_MATCHING PATTERN "*.dll")
+	install(DIRECTORY "${SDL2_INCLUDE_DIR}/../lib/${ARCH}/" DESTINATION "bin" COMPONENT "runtime" FILES_MATCHING PATTERN "*.dll")
+	install(DIRECTORY "${SDL2_IMAGE_INCLUDE_DIR}/../lib/${ARCH}/" DESTINATION "bin" COMPONENT "runtime" FILES_MATCHING PATTERN "*.dll")
+	install(DIRECTORY "${SDL2_TTF_INCLUDE_DIR}/../lib/${ARCH}/" DESTINATION "bin" COMPONENT "runtime" FILES_MATCHING PATTERN "*.dll")
 endif()
