--- a/SDLGfxChevaux/CMakeLists.txt
+++ b/SDLGfxChevaux/CMakeLists.txt
@@ -10,6 +10,8 @@ message ( STATUS "LOGICCHEVAUX_SOURCE_DIR=${LOGICCHEVAUX_SOURCE_DIR}" )
 link_directories (${LOGICCHEVAUX_BINARY_DIR})
 message ( STATUS "LOGICCHEVAUX_BINARY_DIR=${LOGICCHEVAUX_BINARY_DIR}" )
 
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED on)
 
 # includes cmake/FindSDL2.cmake
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
