Improvement C++14 / replace some define by const variable / try to remove bad practice

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,18 @@ Empty
 *.png.h
 *.ttf.h
 SFML-2/sfml-build/
+/LogicChevaux/CMakeFiles/
+/gfx/CMakeFiles/
+/CMakeFiles/
+/bin2C/CMakeFiles/
+/bin2C/cmake_install.cmake
+/bin2C/Makefile
+/bin2C/bin2C
+/maps/CMakeFiles/
+/PremierGalop/CMakeFiles/
+/SDLGfxChevaux/CMakeFiles/
+/SFMLGfxChevaux/CMakeFiles/
+/Makefile
+/Result.png
+/Result2.png
+/cmake_install.cmake
